New feature & enhancement route support browser no longer include webcomponentsjs if it already support.

--- a/public/elements-list.html
+++ b/public/elements-list.html
@@ -17,6 +17,10 @@
 <link rel="import" href="bower_components/firebase-element/firebase-collection.html">
 <link rel="import" href="bower_components/firebase-element/firebase-document.html">
 
+<!-- App Route-->
+<link rel="import" href="bower_components/app-route/app-location.html">
+<link rel="import" href="bower_components/app-route/app-route.html">
+
 <!-- Custom Elements -->
 <link rel="import" href="cover-editor/cover-editor.html">
 <link rel="import" href="speaker-list.html">
