search handled by elasticsearch

--- a/public/elements-list.html
+++ b/public/elements-list.html
@@ -2,6 +2,7 @@
      Vulcanize will inline the imports listed below and print the result to elements.html, to reduce HTTP requests for production. -->
 
 <!-- Iron Elements -->
+<link rel="import" href="bower_components/iron-ajax/iron-ajax.html">
 <link rel="import" href="bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="bower_components/iron-pages/iron-pages.html">
