--- a/public/speaker-list.html
+++ b/public/speaker-list.html
@@ -68,8 +68,7 @@
             </a>
         </template>
 
-        <paper-dialog id="deleteConfirm" modal always-on-top
-                      on-iron-overlay-closed="delCover">
+        <paper-dialog id="deleteConfirm" on-iron-overlay-closed="delCover">
             <div>
                 確定刪除<strong>[[_findNameByKey(delKey)]]</strong>？
             </div>
