--- a/public/elements-list.html
+++ b/public/elements-list.html
@@ -8,10 +8,12 @@
 <link rel="import" href="bower_components/iron-pages/iron-pages.html">
 
 <!-- Paper Elements -->
+<link rel="import" href="bower_components/paper-button/paper-button.html">
 <link rel="import" href="bower_components/paper-header-panel/paper-header-panel.html">
 <link rel="import" href="bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="bower_components/paper-input/paper-input.html">
 <link rel="import" href="bower_components/paper-menu/paper-menu.html">
+<link rel="import" href="bower_components/paper-toast/paper-toast.html">
 <link rel="import" href="bower_components/paper-toolbar/paper-toolbar.html">
 
 <!-- Google Web Components -->
